# aau-p1-software

./: .clang-tidy  .editorconfig  .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: clang-tidy.yml
src/: CMakeLists.txt  api_handler.c  api_handler.h  application.c  application.h  banner.txt  calculations.c  calculations.h  constants.h  evaluate.c  evaluate.h  globals.h  input.c  input.h  main.c  main.h  output.c  output.h  preferences.c  preferences.h  sort.c  sort.h  string_builder.c  string_builder.h  trip.c  trip.h
tests/: CMakeLists.txt  calculations.cc  string_builder.cc
